[tool.poetry]
name = "wrap defautltdict"
version = "0.1.0"
description = "Just some fun"
authors = ["i0tool5"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.991"
flake8 = "^6.0.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
